# roster

./: .check-leak-ignore  .gitignore  .imagelog.json  AGENTS.md  CHANGELOG.md  CHANGES.md  LICENSE  README.md  index-sources.json  index.json  opencode.json  package-lock.json  package.json
.claude/: harness.json  settings.json
.claude-plugin/: marketplace.json
.harness/: harness.json
briefs/: normalize-fingerprint-prompt-transport-impl.md  normalize-fingerprint-prompt-transport-qa.md  normalize-fingerprint-prompt-transport-review.json  normalize-fingerprint-prompt-transport-review.md  normalize-fingerprint-prompt-transport-ship-gate.md  normalize-fingerprint-prompt-transport-spec-compliance.md  normalize-fingerprint-prompt-transport-state.json  pipeline-enhancements-implementer.md  pipeline-enhancements-intake.md  pipeline-enhancements-plan.md  quality-wiring-implementer.md  quality-wiring-intake.md  quality-wiring-plan.md  quality-wiring-qa-scope.md  quality-wiring-reviewer.md  spec-pipeline-implementer.md  spec-pipeline-intake.md  spec-pipeline-plan.md  spec-pipeline-qa-scope.md  spec-pipeline-reviewer.md
docs/: adversarial-review-2026-06-10.md  agents.md  ccusage-metrics-adoption.md  doc-audit-2026-07-09.md  extensions.md  hooks.md  integration-verification.md  roadmap.md  skill-overlap.md  team-proposal-2026-05-22.md
governor/: governor.md
ocaml/agent-manager/: .ta-state.json  agent-roster-agent-manager.opam  dune-project
ocaml/agent-manager/examples/: ta.example.json
ocaml/agent-manager/src/lib/: agent_capability.ml  agent_capability.mli  dashboard_action_export.ml  dashboard_action_export.mli  dashboard_edge_affordance.ml  dashboard_edge_affordance.mli  dashboard_interaction.ml  dashboard_interaction.mli  dashboard_model.ml  dashboard_model.mli  dashboard_refresh_cadence.ml  dashboard_refresh_cadence.mli  dashboard_runner.ml  dashboard_runner.mli  dashboard_snapshot.ml  dashboard_snapshot.mli  dashboard_socket_refresh.ml  dashboard_socket_refresh.mli  dashboard_topology.ml  dashboard_topology.mli  dashboard_tui_layout.ml  dashboard_tui_layout.mli  dashboard_viewport.ml  dashboard_viewport.mli  dune  harness_ta_config.ml  harness_ta_config.mli  id.ml  id.mli  launch_plan.ml  launch_plan.mli  launch_profile.ml  launch_profile.mli  launch_runtime.ml  launch_runtime.mli  launch_state.ml  launch_state.mli  path_resolver.ml  path_resolver.mli  permission.ml  (+29 more)
ocaml/agent-manager/test/: dune  test_dashboard_action_export.ml  test_dashboard_edge_affordance.ml  test_dashboard_interaction.ml  test_dashboard_model.ml  test_dashboard_refresh_cadence.ml  test_dashboard_runner.ml  test_dashboard_snapshot.ml  test_dashboard_socket_refresh.ml  test_dashboard_topology.ml  test_dashboard_tui_layout.ml  test_dashboard_viewport.ml  test_launch_plan.ml  test_launch_runtime.ml  test_launch_state.ml  test_runtime_snapshot.ml  test_state_file.ml  test_state_store.ml  test_ta_cli.ml  test_ta_core.ml  test_tactl_cli.ml  test_tactl_launch_cli.ml  test_tactl_socket_cli.ml
ocaml/agent-manager/test/fixtures/: roster-index.json  ta-missing-roster-agent.json  ta-valid.json
ocaml/agent-manager/test/fixtures/agents/management/: tech-lead.md
ocaml/agent-manager/test/fixtures/agents/testing/: qa.md
patterns/: go.md  ocaml.md  prompt-engineering.md  python.md  rust.md
recruiter/: CHANGELOG.md  recruiter.md
registry/: README.md  code-intel.jsonl  code-intel.schema.json
repo-whiplash/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
schema/: README.md  agent-schema.md  cost-snapshot.schema.json  extension-schema.md  harness-schema.md  hook-schema.md  kb-schema.md  memory-schema.md  profiles.md  qa-state-schema.md  qa-state.schema.json  review-finding.schema.json  review-json-schema.md  review-trace.schema.json  rule-schema.md  skill-schema.md  ta-config-schema.md
scripts/: REVIEW-BUNDLE.md  arch-index-orient.test.js  arch-index-pack.test.js  build-hook-runtime.mjs  build-index.test.ts  build-index.ts  check-agents.ts  check-catalog-sync.ts  check-code-intel-registry.js  check-code-intel-registry.test.js  check-cost-shape.test.ts  check-cost-shape.ts  check-cwr-templates.js  check-friction-shape.ts  check-hook-structure.test.ts  check-hook-structure.ts  check-init-harness.ts  check-kb-links.js  check-leak-delta.test.js  check-leak-diff.sh  check-leak.js  check-leak.test.js  check-ledger-schema.ts  check-pipeline-install.js  check-qa-convergence.js  check-qa-convergence.test.js  check-recruiter-sync.js  check-review-convergence-rules.test.js  check-review-convergence-trace.test.js  check-review-convergence.js  check-review-convergence.test.js  check-roster-upgrade-invariants.test.js  check-schema-enums.ts  check-scope-diff.sh  check-scope-diff.test.js  check-skill-contract.js  check-skill-contract.test.js  check-skill-structure.test.ts  check-skill-structure.ts  code-intel-resolve.js  (+38 more)
skills-meta/: health-2026-07-13-review-qa-breaker-followup.md
specs/: code-intel-packs.md  convergence-gate-fail-closed.md  critical-route-port.md  deterministic-workflow-exec.md  leak-scanner-entropy.md  pipeline-loop-convergence.md  qa-loop-bounding.md  r5-trace-enforcement.md  redgreen-check-containment.md  retrospec-skill.md  roster-auto-update.md  (+8 more)
(+611 files in other folders)
