(lang dune 3.15)

(name agent-roster-agent-manager)
(version 0.1.0)

(package
 (name agent-roster-agent-manager)
 (synopsis "Agent-roster-native tmux workspace manager")
 (description
  "TA manages roster-backed agent workspaces, sessions, and permissions.")
 (homepage "https://github.com/mathiasbourgoin/agent-roster")
 (bug_reports "https://github.com/mathiasbourgoin/agent-roster/issues")
 (depends
  (ocaml (>= 5.2))
  cmdliner
  miaou-tui
  eio_main
  lambda-term
  yojson
  alcotest))
