(test
 (name test_ta_core)
 (libraries ta_core alcotest))

(test
 (name test_state_store)
 (libraries ta_core alcotest))

(test
 (name test_state_file)
 (deps
  (source_tree fixtures))
 (libraries ta_core alcotest))

(test
 (name test_tactl_cli)
 (deps
  (source_tree fixtures)
  ../src/bin/tactl.exe)
 (action
  (setenv
   TACTL_EXE
   %{exe:../src/bin/tactl.exe}
   (run %{test})))
 (libraries alcotest unix))
