(test
 (name test_ta_core)
 (libraries ta_core alcotest))

(test
 (name test_state_store)
 (libraries ta_core alcotest))

(test
 (name test_state_file)
 (deps
  (source_tree fixtures))
 (libraries ta_core alcotest unix))

(test
 (name test_launch_plan)
 (deps
  (source_tree fixtures))
 (libraries ta_core alcotest))

(test
 (name test_launch_runtime)
 (libraries ta_core alcotest))

(test
 (name test_launch_state)
 (libraries ta_core alcotest))

(test
 (name test_runtime_snapshot)
 (libraries ta_core alcotest unix yojson))

(test
 (name test_dashboard_model)
 (libraries ta_core alcotest unix))

(test
 (name test_dashboard_interaction)
 (libraries ta_core alcotest unix))

(test
 (name test_tactl_cli)
 (deps
  (source_tree fixtures)
  ../src/bin/tactl.exe)
 (action
  (setenv
   TACTL_EXE
   %{exe:../src/bin/tactl.exe}
   (run %{test})))
 (libraries alcotest unix yojson))

(test
 (name test_tactl_launch_cli)
 (deps
  (source_tree fixtures)
  ../src/bin/tactl.exe)
 (action
  (setenv
   TACTL_EXE
   %{exe:../src/bin/tactl.exe}
   (run %{test})))
 (libraries alcotest unix))

(test
 (name test_ta_cli)
 (deps
  (source_tree fixtures)
  ../src/bin/ta.exe)
 (action
  (setenv
   TA_EXE
   %{exe:../src/bin/ta.exe}
   (run %{test})))
 (libraries ta_core alcotest unix))

(test
 (name test_tactl_socket_cli)
 (deps
  (source_tree fixtures)
  ../src/bin/tactl.exe)
 (action
  (setenv
   TACTL_EXE
   %{exe:../src/bin/tactl.exe}
   (run %{test})))
 (libraries alcotest unix yojson))
