(library
 (name ta_core)
 (public_name agent-roster-agent-manager.core)
 (modules
  id
  dashboard_interaction
  dashboard_model
  dashboard_refresh_cadence
  dashboard_socket_refresh
  dashboard_snapshot
  launch_plan
  launch_runtime
  launch_state
  permission
  roster_frontmatter
  roster_index
  runtime_snapshot
  socket_api
  socket_protocol
  state_file
  state_model
  state_snapshot
  state_store
  workspace_config
  tmux)
 (private_modules state_model state_snapshot)
 (libraries yojson unix))
