(library
 (name ta_core)
 (public_name agent-roster-agent-manager.core)
 (modules
  id
  agent_capability
  dashboard_action_export
  dashboard_edge_affordance
  dashboard_interaction
  dashboard_model
  dashboard_refresh_cadence
  dashboard_runner
  dashboard_socket_refresh
  dashboard_snapshot
  dashboard_topology
  dashboard_tui_layout
  dashboard_viewport
  harness_ta_config
  launch_plan
  launch_profile
  launch_runtime
  launch_state
  permission
  path_resolver
  roster_frontmatter
  roster_pipeline_role
  roster_index
  runtime_snapshot
  startup_guide
  startup_paths
  socket_api
  socket_protocol
  state_file
  state_model
  state_snapshot
  state_store
  workspace_config
  tmux)
 (private_modules state_model state_snapshot)
 (libraries yojson unix))
